WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212382
SamplingProfiler::takeSample() should not assume that ENABLE(WEBASSEMBLY) means Wasm is enabled.
https://bugs.webkit.org/show_bug.cgi?id=212382
Summary
SamplingProfiler::takeSample() should not assume that ENABLE(WEBASSEMBLY) mea...
Mark Lam
Reported
2020-05-26 12:17:41 PDT
Fixing this will allow sampling profiler tests to run with JSC_useJIT=0 without crashing.
Attachments
proposed patch.
(2.13 KB, patch)
2020-05-26 12:20 PDT
,
Mark Lam
saam
: review+
saam
: commit-queue-
Details
Formatted Diff
Diff
proposed patch.
(4.70 KB, patch)
2020-05-26 13:49 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2020-05-26 12:20:45 PDT
Created
attachment 400267
[details]
proposed patch.
Saam Barati
Comment 2
2020-05-26 12:23:25 PDT
Comment on
attachment 400267
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=400267&action=review
> Source/JavaScriptCore/ChangeLog:3 > + SamplingProfiler::takeSample() should assume that ENABLE(WEBASSEMBLY) means Wasm is enabled.
should => should not
Saam Barati
Comment 3
2020-05-26 12:26:10 PDT
Comment on
attachment 400267
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=400267&action=review
> Source/JavaScriptCore/runtime/SamplingProfiler.cpp:357 > + Lock unusedLock; > + auto wasmCalleesLocker = holdLock(Wasm::isSupported() ? Wasm::CalleeRegistry::singleton().getLock() : unusedLock);
why not just use Optional<LockHolder>? Seems cleaner than this unusedLock approach
Mark Lam
Comment 4
2020-05-26 13:49:15 PDT
Created
attachment 400270
[details]
proposed patch.
EWS
Comment 5
2020-05-26 14:32:54 PDT
Committed
r262161
: <
https://trac.webkit.org/changeset/262161
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400270
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-05-26 14:33:25 PDT
<
rdar://problem/63642209
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug