SamplingProfiler::takeSample() should not assume that ENABLE(WEBASSEMBLY) means Wasm is enabled. https://bugs.webkit.org/show_bug.cgi?id=212382

Reviewed by Saam Barati.

Wasm can still be disabled at runtime with JSC options.  Fixing this will allow
sampling profiler tests to run with JSC_useJIT=0 without crashing.

* runtime/SamplingProfiler.cpp:
(JSC::FrameWalker::FrameWalker):
(JSC::FrameWalker::recordJITFrame):
(JSC::CFrameWalker::CFrameWalker):
(JSC::SamplingProfiler::takeSample):


Canonical link: https://commits.webkit.org/225221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262161 268f45cc-cd09-0410-ab3c-d52691b4dbfc